--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 	"devDependencies": {
 		"@iconify/svelte": "^4.2.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/kit": "^2.19.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@typescript-eslint/eslint-plugin": "^8.26.1",
+		"@typescript-eslint/parser": "^8.26.1",
 		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
+		"svelte-check": "^4.1.5",
+		"typescript": "^5.8.2",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
