--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"iconify-icon": "^2.3.0",
 		"imagemin": "^9.0.0",
 		"imagemin-mozjpeg": "^10.0.0",
 		"imagemin-webp": "^8.0.0"
