--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"devDependencies": {
 		"@iconify/svelte": "^4.2.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.19.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@typescript-eslint/eslint-plugin": "^8.26.1",
@@ -27,6 +29,8 @@
 		"iconify-icon": "^2.3.0",
 		"imagemin": "^9.0.0",
 		"imagemin-mozjpeg": "^10.0.0",
-		"imagemin-webp": "^8.0.0"
+		"imagemin-webp": "^8.0.0",
+		"plyr": "^3.7.8",
+		"sharp": "^0.33.5"
 	}
 }
